re PR middle-end/32970 (C++ frontend can not handle vector pointer constant parameter)

PR middle-end/32970
gcc/
	* tree.c (reconstruct_complex_type): For a pointer to a vector,
	use build_qualified_type to retain qualifiers of the base type.
testsuite/
	* g++.dg/ext/altivec-14.C: New test.

From-SVN: r127578